<resources>
    <string name="app_name" translatable="false">ShareIt</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_album_creation">Create Album</string>
    <string name="menu_album_information">Information</string>
    <string name="menu_album_image">Images</string>
    <string name="menu_explore">Explore</string>
    <string name="menu_account">My account</string>
    <string name="menu_logOut">Log Out</string>
    <string name="menu_album_add_image">Add new image</string>
    <string name="menu_album_creation_general">General information</string>
    <string name="menu_album_creation_shared">Sharing information</string>
    <string name="tab_images">Images</string>
    <string name="tab_albums">Albums</string>
    <string name="tab_general">General</string>
    <string name="tab_shared">Shared</string>
    <string name="tab_participants">Participants</string>
    <string name="read_only">Read only supporting text</string>
    <string name="not_enabled">Not enabled</string>
    <string name="required">*required</string>
    <string name="err_empty_field">This field is mandatory</string>
    <string name="err_invalid_date">This is not a valid date</string>
    <string name="err_invalid_later_date">It must be later than the start date</string>
    <string name="toast_successful_logout">You have logged out from your account</string>
    <string name="action_search">Search</string>
    <string name="action_chat">Chat</string>
    <string name="action_info">Information</string>
    <string name="action_order">Order By…</string>
    <string name="action_order_album">Album</string>
    <string name="action_order_date">Date</string>
    <string name="action_order_likes">Likes</string>
    <string name="action_order_custom">Custom</string>
    <string name="action_order_creation_date">Creation date</string>
    <string name="action_order_name">Name</string>
    <string name="action_order_last_update">Last update</string>
    <string name="action_order_ascending">Ascending</string>
    <string name="action_order_descending">Descending</string>
    <string name="action_filter">Filter By…</string>
    <string name="action_filter_show_tags">Show Tags</string>
    <string name="action_filter_all">All images</string>
    <string name="action_filter_mine">My images</string>
    <string name="action_most_liked">Most liked</string>
    <string name="action_choose_one">Choose one</string>
    <string name="action_promote_to_member">Promote to Member</string>
    <string name="action_demote_to_guest">Demote to Guest</string>
    <string name="action_eliminate_participant">Eliminate participant</string>
    <string name="action_delete_image">Delete image</string>
    <string name="label_signUp">Register</string>
    <string name="label_login">Login</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_password_repeat">Repeat password</string>
    <string name="placeholder_email">Email*</string>
    <string name="placeholder_password">Password*</string>
    <string name="placeholder_password_repeat">Repeat password*</string>
    <string name="btn_signUp">Sign Up</string>
    <string name="btn_logIn">Log In</string>
    <string name="label_other_methods">or Log in with</string>
    <string name="btn_forgot_password">Forgot password?</string>
    <string name="progress_login_btn_desc">Trying to log in to your account</string>
    <string name="progress_signup_btn_desc">Trying to create an account</string>
    <string name="progress_forgot_password_btn_desc">Trying to send recovery email</string>
    <string name="google_login_btn_desc">Log in using your Google account</string>
    <string name="btn_already_have_account">Already have an account? Log in</string>
    <string name="btn_do_not_have_account">Don\'t have an account? Sign up</string>
    <string name="toast_successful_login">You have been logged in to your account</string>
    <string name="toast_successful_signup">Your account has been successfully created</string>
    <string name="help_text_password">Passwords must have at least 1 digit, 1 lower case and 1 upper case letter</string>
    <string name="err_not_an_email">Not recognized as an email</string>
    <string name="err_password_too_short">Passwords must have at least %1$d characters</string>
    <string name="err_invalid_password">1 digit, 1 lower case and 1 upper case letter are required</string>
    <string name="err_passwords_dont_match">Passwords do not match</string>
    <string name="toast_error_google_credential">Error while retrieving Google credentials</string>
    <string name="toast_error_authentication">Authentication failed: %1$s</string>
    <string name="toast_successful_reset_password">Reset password email successfully sent. Check your email</string>
    <string name="toast_error_repeated_reset_password_email">You have already sent a reset password email</string>
    <string name="toast_error_type_google_credential">Credential is not of type Google ID!</string>
    <string name="fab_add_album_desc">Create a new album</string>
    <string name="label_no_images">There are no images yet. Add one to an album!</string>
    <string name="label_no_albums">There are no albums yet. Create one!</string>
    <string name="toast_info_albums_order">Ordering albums by %1$s</string>
    <string name="toast_info_order_direction">Changed order direction: %1$s</string>
    <string name="toast_info_images_order">Ordering images by %1$s</string>
    <string name="toast_info_images_filter">Filtering images: %1$s</string>
    <string name="searchbar_hint">Search for albums</string>
    <string name="toast_no_more_albums">No more albums available</string>
    <string name="label_user_name">Display name</string>
    <string name="label_user_email">User email</string>
    <string name="btn_edit">Edit data</string>
    <string name="btn_save">Save data</string>
    <string name="btn_logOut">Log Out</string>
    <string name="btn_exit">Exit app</string>
    <string name="err_name_too_long">This name is too long</string>
    <string name="profile_image_desc">User profile picture</string>
    <string name="edit_profile_image_desc">Edit user profile picture</string>
    <string name="album_name">Album\'s name</string>
    <string name="label_date_selection">Select Date for the Album</string>
    <string name="date_selection_none">None</string>
    <string name="date_selection_single">Single</string>
    <string name="date_selection_range">Range</string>
    <string name="date_format">DD/MM/YYYY</string>
    <string name="album_date_start">Start date</string>
    <string name="album_date_end">End date</string>
    <string name="switch_location_selection">Select Location for the Album</string>
    <string name="switch_shared_album">Shared Album</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_create">Create</string>
    <string name="btn_add">Add</string>
    <string name="switch_invitation_link">Invitation link</string>
    <string name="btn_info_permission">Information about permissions and roles</string>
    <string name="info_permission_and_roles_title">Permission and roles</string>
    <string name="info_permission_and_roles_message">There are <b>two roles</b> for album participants. Different permissions can be set for each role. <b>Members</b>: those who have been added directly by the album creator. <b>Guests</b>: those who have joined the album on their own (only possible if the album has <i>Public</i> visibility). The album <b>creator can modify the role</b> of a participant at any time by promoting him/her to Member or demoting him/her to Guest.</string>
    <string name="bt_close">Close</string>
    <string name="label_permission_settings">Permission Settings</string>
    <string name="label_permission_members">Members</string>
    <string name="label_permission_images">Images</string>
    <string name="label_permission_guests">Guests</string>
    <string name="label_permission_chat">Chat</string>
    <string name="toast_album_created">Album created successfully</string>
    <string name="toast_error_creating_album">An error occurred while creating the album</string>
    <string name="label_no_album_images">There are no images in this album yet.</string>
    <string name="fab_add_image_desc">Add a new image</string>
    <string name="label_name">Name</string>
    <string name="label_cover">Album\'s Cover</string>
    <string name="label_use_last_image">Use last image</string>
    <string name="cover_custom_btn_desc">Set a custom Album cover</string>
    <string name="label_date">Date of the album</string>
    <string name="btn_join_album">Join album</string>
    <string name="progress_join_album_btn_desc">Trying to join the album</string>
    <string name="info_album_joined">Album joined!</string>
    <string name="error_album_not_joined">An error occurred while trying to join</string>
    <string name="btn_delete_album">Delete album</string>
    <string name="warn_delete_album_title">Delete album?</string>
    <string name="warn_delete_album_message">This will permanently delete the album, including all its photos, participants and messages.</string>
    <string name="btn_drop_album">Drop album</string>
    <string name="warn_drop_album_title">Drop album?</string>
    <string name="warn_drop_album_message">You will lose access to all its photos and messages.</string>
    <string name="warn_eliminated_from_album_title">Access denied</string>
    <string name="warn_eliminated_from_album_message">Either you were eliminated from this album or the album itself got deleted.</string>
    <string name="bt_exit">Exit</string>
    <string name="label_date_disabled">Date not enabled</string>
    <string name="label_location">Location of the Album</string>
    <string name="label_location_disabled">Location not enabled</string>
    <string name="fab_edit_desc">Edit the information displayed</string>
    <string name="fab_save_desc">Save the modified information</string>
    <string name="label_tags">Tags</string>
    <string name="tags_party">Party</string>
    <string name="tags_humor">Humor</string>
    <string name="tags_travel">Travel</string>
    <string name="tags_nature">Nature</string>
    <string name="tags_events">Events</string>
    <string name="tags_food">Food</string>
    <string name="tags_animals">Animals</string>
    <string name="tags_sports">Sports</string>
    <string name="tags_culture">Culture</string>
    <string name="tags_people">People</string>
    <string name="label_album_visibility">Visibility</string>
    <string name="label_album_visibility_private_explanation">Only you can see the album\'s images</string>
    <string name="label_album_visibility_shared_explanation">You can choose who you share your album with</string>
    <string name="label_album_visibility_public_explanation">Anyone can join your album as Guest and see the images</string>
    <string name="album_visibility_private">Private</string>
    <string name="album_visibility_shared">Shared</string>
    <string name="album_visibility_public">Public</string>
    <string name="images_permission_see">Just see</string>
    <string name="images_permission_vote">See and like</string>
    <string name="images_permission_vote_add">See, like and add</string>
    <string name="chat_permission_hidden">Hidden</string>
    <string name="label_participants">Participants</string>
    <string name="add_participant">Participant\'s email</string>
</resources>