<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="uniovi.eii.shareit.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_home_albums"
            app:destination="@id/nav_home_albums" />
        <action
            android:id="@+id/action_nav_home_to_nav_home_images"
            app:destination="@id/nav_home_images" />
    </fragment>

    <fragment
        android:id="@+id/nav_home_images"
        android:name="uniovi.eii.shareit.ui.home.images.HomeImagesFragment"
        android:label="@string/tab_images"
        tools:layout="@layout/fragment_home_images" />

    <fragment
        android:id="@+id/nav_home_albums"
        android:name="uniovi.eii.shareit.ui.home.albums.HomeAlbumsFragment"
        android:label="@string/tab_albums"
        tools:layout="@layout/fragment_home_albums" >
        <action
            android:id="@+id/action_nav_home_albums_to_nav_album_creation"
            app:destination="@id/nav_album_creation" />
    </fragment>

    <fragment
        android:id="@+id/nav_album_creation"
        android:name="uniovi.eii.shareit.ui.album.AlbumCreationFragment"
        android:label="@string/menu_album_creation"
        tools:layout="@layout/fragment_album_creation" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="uniovi.eii.shareit.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>