<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.album.information.display.AlbumInformationParticipantsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/labelParticipants"
            style="?attr/textAppearanceTitleLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_participants" />

        <LinearLayout
            android:id="@+id/ownerAddingLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addParticipantLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/add_participant">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addParticipantEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/addParticipantBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/divider_margin"
                android:text="@string/btn_add" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerParticipants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/line_recycler_view_participant" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>